version/0.20/_sources/api/solver/_autosummary/settings/solid_motion_axis_direction.rst.txt
:orphan:

.. _solid_motion_axis_direction:

solid_motion_axis_direction
===========================

.. autoclass:: ansys.fluent.core.solver.settings_241.solid_motion_axis_direction.solid_motion_axis_direction
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

====================================   =======================

Parent                                                 Summary

====================================   =======================
:ref:`disabled <disabled>`                 Help not available.

:ref:`solid_motion <solid_motion_1>`       Help not available.

====================================   =======================

