version/0.27/_sources/api/solver/_autosummary/settings/solid_motion_axis_direction.rst.txt
:orphan:

.. _solid_motion_axis_direction:

solid_motion_axis_direction
===========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.solid_motion_axis_direction
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`solid_motion_axis_direction_child <solid_motion_axis_direction_child>`


.. rubric:: Included in:

==================================   ==============================================================

Parent                                                                                      Summary

==================================   ==============================================================
:ref:`disabled <disabled>`                   Allows to change disabled model variables or settings.

:ref:`solid_motion <solid_motion>`       Allows to change solid-motion model variables or settings.

==================================   ==============================================================

